# TodoAPP

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.md  design.md  main.cpp  urls.md
Application/: TodoManager.hpp
Entity/: Todo.hpp
Persistence/CsvFiles/: CSVHandler.hpp
Persistence/InMemory/: InMemoryTodoRepository.hpp
Web/: HttpUtils.hpp  views.cpp  views.h
